--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watchAll",
+    "coverage": "jest --coverage"
   },
   "dependencies": {
     "@prismicio/client": "^5.1.0",
@@ -26,11 +28,19 @@
     "stripe": "^8.194.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.11.1",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
     "@types/node": "^17.0.1",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "babel-jest": "^27.4.5",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.4.5",
+    "jest-dom": "^4.0.0",
+    "ts-jest": "^27.1.2",
     "typescript": "^4.5.4"
   }
 }
